# flecc_in_c

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.COMMERCIAL.txt  README.md  run_ecdlps.sh
cmake/: FindStandardMathLibrary.cmake  clangformat.cmake  coverage.cmake  doxygenSupport.cmake  executeCoverageTest.cmake  installSupport.cmake  run_with_stdin_pipe.sh  setDefaultSettings.cmake  testCoverage.cmake  testing.cmake  versionSupport.cmake
cmake/scripts/: run.cmake  run_with_stdin_pipe.sh
cmake/toolchain/: arm-linux-gnu-eabi-gcc.cmake  arm-none-eabi-gcc.cmake  x86-clang.cmake
doc/: Makefile  doxy.cfg  flecc_in_c_user_docu.tex  template.doxy.in
ecdlp_challenges/: ecdlp_ITSEC2015_65.chal  ecdlp_ITSEC2015_66.chal  ecdlp_ITSEC2015_67.chal  ecdlp_ITSEC2015_68.chal  ecdlp_ITSEC2015_69.chal  ecdlp_ITSEC2015_70.chal  ecdlp_ITSEC2015_71.chal  ecdlp_ITSEC2015_72.chal  ecdlp_ITSEC2015_73.chal  ecdlp_ITSEC2015_74.chal  ecdlp_ITSEC2015_75.chal  ecdlp_ITSEC2015_76.chal  ecdlp_ITSEC2015_77.chal  ecdlp_ITSEC2015_78.chal  ecdlp_ITSEC2015_79.chal  ecdlp_ITSEC2015_80.chal  ecdlp_ITSEC2015_81.chal  ecdlp_ITSEC2015_82.chal  ecdlp_ITSEC2015_83.chal  ecdlp_ITSEC2015_84.chal  ecdlp_ITSEC2015_85.chal  ecdlp_ITSEC2015_86.chal  ecdlp_ITSEC2015_87.chal  ecdlp_ITSEC2015_88.chal  ecdlp_ITSEC2015_89.chal  ecdlp_ITSEC2015_90.chal  ecdlp_ITSEC2015_91.chal  ecdlp_ITSEC2015_92.chal  ecdlp_ITSEC2015_93.chal  ecdlp_ITSEC2015_94.chal  ecdlp_ITSEC2015_95.chal  ecdlp_ITSEC2015_96.chal
flecc_in_c/: CMakeLists.txt  types.h
flecc_in_c/arch/: arch.h
flecc_in_c/arch/posix/io/: io_posix.c
flecc_in_c/bi/: bi.h  bi_gen.h
flecc_in_c/eccp/: eccp_jacobian.h  eccp_protected.h  eccp_std_projective.h
flecc_in_c/gfp/: gfp.h  gfp_opt_3.c
flecc_in_c/hash/: sha1.h  sha2.c
flecc_in_c/io/: io_gen.c  io_gen.h
flecc_in_c/protocols/: ecdsa.c
flecc_in_c/utils/: assert.c  param_const.c  performance.c  rand.c
include/: CMakeLists.txt
include/flecc_in_c/: types.h
include/flecc_in_c/bi/: bi.h  bi_const_runtime.h  bi_gen.h
include/flecc_in_c/eccp/: eccp.h  eccp_affine.h  eccp_generic.h  eccp_jacobian.h  eccp_protected.h  eccp_std_projective.h
include/flecc_in_c/gfp/: gfp.h  gfp_const_runtime.h  gfp_gen.h  gfp_mont.h  gfp_opt_3.h
include/flecc_in_c/hash/: hash.h  sha1.h  sha2.h
include/flecc_in_c/io/: io.h  io_gen.h
include/flecc_in_c/protocols/: ecdh.h  ecdsa.h  eckeygen.h  protocols.h
include/flecc_in_c/utils/: assert.h  param.h  parse.h  performance.h  rand.h
src/: CMakeLists.txt  main.c  types.h
src/arch/: arch.h
src/arch/posix/io/: io_posix.c  io_posix.h
src/arch/x64/utils/: performance.c  performance.h
src/bi/: bi.h  bi_const_runtime.c  bi_const_runtime.h  bi_gen.c  bi_gen.h
src/eccp/: eccp.h  eccp_affine.c  eccp_affine.h  eccp_generic.c  eccp_generic.h  eccp_jacobian.c  eccp_jacobian.h  eccp_protected.c  eccp_std_projective.c
src/gfp/: gfp.h  gfp_const_runtime.c  gfp_const_runtime.h  gfp_gen.c  gfp_gen.h  gfp_mont.c  gfp_mont.h  gfp_opt_3.c  gfp_opt_3.h
src/hash/: hash.h  sha1.c  sha1.h  sha2.c  sha2.h  sha3.c  sha3.h
src/io/: io.h  io_gen.c  io_gen.h
src/protocols/: ecdh.c  ecdh.h  ecdsa.c  ecdsa.h  eckeygen.c  eckeygen.h  protocols.h
src/tests/: test_ser.c
src/utils/: assert.c  assert.h  param.c  param.h  param_const.c  parse.c  parse.h  performance.c  performance.h  rand.c  rand.h
test_ecdlp/: eccp_ecdlp.c  eccp_ecdlp.h  main.c  rbtree.c  rbtree.h  test_ser.c  test_ser.h
testfiles/: hashing.tst  secp192r1_ecc.tst  secp224r1_protocols.tst  secp256r1_bi.tst  secp256r1_ecc.tst  secp256r1_gfp.tst  secp384r1_ecc.tst  secp384r1_rfc.tst  secp521r1_ecc.tst  secp521r1_gfp.tst  secp521r1_protocols.tst  secp521r1_rfc.tst
testrunner/: CMakeLists.txt  assert.c  assert.h  main.c  test_ser.c  test_ser.h
tests/: CMakeLists.txt  benchmark.c  ecc_roundtrip.c  hashing.tst  secp192r1_bi.tst  secp192r1_ecc.tst  secp192r1_gfp.tst  secp192r1_protocols.tst  secp224r1_bi.tst  secp224r1_ecc.tst  secp224r1_gfp.tst  secp224r1_protocols.tst  secp256r1_bi.tst  secp256r1_ecc.tst  secp256r1_gfp.tst  secp256r1_protocols.tst  secp256r1_rfc.tst  secp384r1_bi.tst  secp384r1_ecc.tst  secp384r1_gfp.tst  secp384r1_protocols.tst  secp521r1_bi.tst  secp521r1_ecc.tst  secp521r1_gfp.tst  secp521r1_protocols.tst
tests/add-subdirectory-test/: CMakeLists.txt  main.c
tests/find-package-test/: CMakeLists.txt
